--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,6 +15,11 @@ spring:
         format_sql: true
     open-in-view: false
 
+  data:
+    redis:
+      port: ${REDIS_PORT}
+      host: ${REDIS_HOST}
+
 service:
   jwt:
     secret-key: ${JWT_SECRET_KEY}
