[ feat ] env 파일 추가로인한 깃 이그노어 env목록 추가 #12

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ build/
 !**/src/test/**/build/
 .DS_Store
 /src/main/resources/application-key.yml
-
+.env.*
 ### STS ###
 .apt_generated
 .classpath
